--- a/client/src/sass/partials/_card-styles.scss
+++ b/client/src/sass/partials/_card-styles.scss
@@ -35,7 +35,7 @@
     }
 
     @media (max-width: 767px) {
-      width: 50vw;
+      width: calc(50vw - 6px);
     }
 
   &:hover {
